# mecatronica

./: README.md
android/: README.md
android/ArduinoAdk/app/: build.gradle
android/ArduinoBlinkLED/: ArduinoBlinkLED.ino
android/ArduinoBlinkLED/ArduinoBlinkLED/: ArduinoBlinkLED.ino
android/roverto/app/: build.gradle
android/roverto_arduino/: roverto_arduino.ino
android/roverto_client/: roverto_client.py
android/roverto_server/: roverto_server.py
arduino/: readme.md
arduino/lib/BeltSorter/: BeltSorter.cpp  BeltSorter.h  BeltSorter.ino  keywords.txt  library.properties
arduino/lib/SimpleScheduler/: SimpleScheduler.cpp  SimpleScheduler.h  SimpleTask.cpp  SimpleTask.h  readme.txt
arduino/sketches/BlinkSerial/: BlinkSerial.ino
arduino/sketches/cambiar_id_tpa81/: cambiar_id_tpa81.ino
arduino/sketches/h_bridge_test/: h_bridge_test.ino
arduino/sketches/led_class/: LedClass.cpp  LedClass.h  led_class.ino
arduino/sketches/motorcc/: motorcc.ino
python/: SerialWrite.py
ros/: Link to cuadruped_dummy_plug
ros/biped_description/: CMakeLists.txt  package.xml  urdf.rviz
ros/biped_dummy_plug/: CMakeLists.txt  package.xml
ros/biped_dummy_plug/launch/: biped.launch
ros/biped_dummy_plug/src/biped_dummy_plug/: biped_dummy_plug_node.py
ros/biped_dummy_plug_arduino/: biped_dummy_plug.ino
ros/biped_interface/: CMakeLists.txt  package.xml  setup.py
ros/biped_interface/msg/: ServoArray.msg
ros/biped_interface/scripts/: test.py
ros/biped_interface/src/biped_interface/: biped_dummy_plug_node.py  commander.py
ros/c_msg/: CMakeLists.txt  package.xml
ros/c_msg/msg/: IR.msg  MotorFeedback.msg  MotorVel.msg  ServoArray.msg  ServoArray_quadruped.msg  dummy_IR.msg  dummy_encoder.msg  dummy_platform_sensors.msg  dummy_sonar.msg  encoder.msg  joy.msg  platform_sensors.msg  sonar.msg  sonar2.msg
ros/cuadruped_dummy_plug/: CMakeLists.txt  package.xml
(+43 files in other folders)
