<?xml version="1.0"?>
<package>
  <name>biped_dummy_plug</name>
  <version>0.0.1</version>
  <description>The Biped Dummy Plug Package</description>

  <author email="knzo@live.cl">Kenzo</author>
  <maintainer email="rorro.mr@gmail.com">Rodrigo Muñoz</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>c_msg</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>c_msg</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
